--- a/index.html
+++ b/index.html
@@ -357,13 +357,32 @@
               </li>
             </ul>
           </li>
+          <li>
+            <form>
+              <label>
+                <h5>Zapisz się do newslettera</h5>
+                <input
+                  class="newsletter-input"
+                  type="email"
+                  name="newsletter"
+                  placeholder="E-mail"
+                />
+              </label>
+              <button class="newsletter-button" type="submit">
+                Zapisz się
+                <svg class="newsletter-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
+          </li>
         </ul>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
-          &#10006
+          &#10006;
         </button>
       </div>
     </div>
