--- a/index.html
+++ b/index.html
@@ -384,6 +384,47 @@
         <button type="button" class="modal-close" data-modal-close>
           &#10006;
         </button>
+        <div class="user-form">
+          <h6 class="form-title">Zostaw swoje dane w formularzu poniżej</h6>
+          <form>
+            <p class="label-name">Imię</p>
+            <label class="label-area">
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+              <input class="input-area" name="user-name" type="text" />
+            </label>
+            <p class="label-name">Telefon</p>
+            <label class="label-area">
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+              <input class="input-area" name="user-phone" type="tel" />
+            </label>
+            <p class="label-name">Email</p>
+            <label class="label-area">
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+              <input class="input-area" name="user-email" type="email" />
+            </label>
+            <p class="label-name">Komentarz</p>
+            <label class="label-area">
+              <textarea
+                class="input-textarea"
+                name="user-feedback"
+                rows="7"
+                placeholder="Wprowadź tekst"
+              ></textarea>
+            </label>
+            <label class="privacy">
+              <input type="checkbox" name="privacy" />
+              Oświadczam iż akceptuję <a href="#">Regulamin</a> i
+              <a href="#">Politykę Prywatności.</a>
+            </label>
+            <button class="submit-button" type="submit">Wyślij</button>
+          </form>
+        </div>
       </div>
     </div>
     <script src="./js/modal.js"></script>
