--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 />
               </label>
               <button class="newsletter-button" type="submit">
-                Zapisz się
+                <span>Zapisz się</span>
                 <svg class="newsletter-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-send"></use>
                 </svg>
@@ -418,7 +418,11 @@
               ></textarea>
             </label>
             <label class="privacy">
-              <input type="checkbox" name="privacy" />
+              <input
+                class="custom-input hidden"
+                type="checkbox"
+                name="privacy"
+              />
               Oświadczam iż akceptuję <a href="#">Regulamin</a> i
               <a href="#">Politykę Prywatności.</a>
             </label>
