--- a/potrfolio.html
+++ b/potrfolio.html
@@ -277,6 +277,25 @@
               </li>
             </ul>
           </li>
+          <li>
+            <form>
+              <label>
+                <h5>Zapisz się do newslettera</h5>
+                <input
+                  class="newsletter-input"
+                  type="email"
+                  name="newsletter"
+                  placeholder="E-mail"
+                />
+              </label>
+              <button class="newsletter-button" type="submit">
+                <span>Zapisz się</span>
+                <svg class="newsletter-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
+          </li>
         </ul>
       </div>
     </footer>
