--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             </ul>
           </li>
           <li>
-            <form>
+            <form name="newsletter">
               <label>
                 <h5>Zapisz się do newslettera</h5>
                 <input
@@ -386,36 +386,44 @@
         </button>
         <div class="user-form">
           <h6 class="form-title">Zostaw swoje dane w formularzu poniżej</h6>
-          <form>
-            <p class="label-name">Imię</p>
-            <label class="label-area">
-              <svg class="form-icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-person"></use>
-              </svg>
-              <input class="input-area" name="user-name" type="text" />
+          <form name="service-order">
+            <label>
+              <p class="label-name">Imię</p>
+              <div class="label-area">
+                <svg class="form-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+                <input class="input-area" name="user-name" type="text" />
+              </div>
             </label>
-            <p class="label-name">Telefon</p>
-            <label class="label-area">
-              <svg class="form-icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-phone"></use>
-              </svg>
-              <input class="input-area" name="user-phone" type="tel" />
+            <label>
+              <p class="label-name">Telefon</p>
+              <div class="label-area">
+                <svg class="form-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+                <input class="input-area" name="user-phone" type="tel" />
+              </div>
             </label>
-            <p class="label-name">Email</p>
-            <label class="label-area">
-              <svg class="form-icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-email"></use>
-              </svg>
-              <input class="input-area" name="user-email" type="email" />
+            <label>
+              <p class="label-name">Email</p>
+              <div class="label-area">
+                <svg class="form-icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+                <input class="input-area" name="user-email" type="email" />
+              </div>
             </label>
-            <p class="label-name">Komentarz</p>
-            <label class="label-area">
-              <textarea
-                class="input-textarea"
-                name="user-feedback"
-                rows="7"
-                placeholder="Wprowadź tekst"
-              ></textarea>
+            <label>
+              <p class="label-name">Komentarz</p>
+              <div class="label-area">
+                <textarea
+                  class="input-textarea"
+                  name="user-feedback"
+                  rows="7"
+                  placeholder="Wprowadź tekst"
+                ></textarea>
+              </div>
             </label>
             <label class="privacy">
               <input
